--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
     "lodash": "^4.17.21",
