--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "csv-writer": "^1.6.0",
     "line-reader": "^0.4.0",
     "node-cron": "^3.0.0",
