--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "apollo-server-core": "^3.5.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
+    "express": "^4.18.1",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
